# app/models/category.rb
@@ -1,0 +1,6 @@
+class Category < ApplicationRecord
+  validates :name, presence: true, uniqueness: true
+  validates :active, inclusion: { in: [true, false] }
+
+  scope :active, -> { where(active: true) }
+end
